[modernize] Use Character.valueOf instead of new Character